--- a/ChatDocs/ChatDocs/Info.plist
+++ b/ChatDocs/ChatDocs/Info.plist
@@ -9,23 +9,28 @@
 			<string>Editor</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>com.saturdayapps.chatdocs.document</string>
+				<string>$(PRODUCT_BUNDLE_IDENTIFIER).document</string>
 			</array>
 			<key>NSUbiquitousDocumentUserActivityType</key>
-			<string>com.saturdayapps.chatdocs.document</string>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).document</string>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>chatdoc</string>
+			</array>
 		</dict>
 	</array>
-	<key>UTImportedTypeDeclarations</key>
+	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).document</string>
 			<key>UTTypeConformsTo</key>
 			<array>
 				<string>public.document</string>
+				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
 			<string>ChatDocs Document</string>
-			<key>UTTypeIdentifier</key>
-			<string>com.saturdayapps.chatdocs.document</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
